update README file

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ capstone_script.ipynb
 capstone_data.ipynb
 capstone.ipynb
 recommendation.ipynb
+recommendation2.ipynb
 restaurant_setup.py
 restaurant_page_setup.py
