--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ capstone_data.ipynb
 capstone.ipynb
 restaurant_setup.py
 restaurant_page_setup.py
+src/methods.pyc
+src/app.pyc
+src/recommendations.pyc
